@@ -1,3 +1,10 @@
+********** SPL 1.5 Release Candidate **********
+===== Build 0063 2019/04/12 =====
+
+* Added more parse-time check
+* Bug fixes:
+    * For-each loop not working on spl iterable classes
+
 ********** SPL 1.5 Beta 3 **********
 ===== Build 0062 2019/04/11 =====
 
